# consistencyguard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
consistencyguard/: __init__.py  cli.py  detector.py  embedder.py  models.py  providers.py  proxy.py  reporter.py  store.py  webhooks.py
demo/: run_demo.py
docs/: FAILURE_ANALYSIS.md  SYSTEM_DESIGN.md
tests/: conftest.py  test_detector.py  test_providers.py  test_store.py  test_user_flows.py
