[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consistencyguard"
version = "1.0.0"
description = "Real-time LLM output consistency monitor"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
cg = "consistencyguard.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
